--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,12 +18,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Ensure browsers are installed
+    - name: Ensure Playwright browsers are installed
       run: python -m playwright install --with-deps
-    - name: Run your tests
-      run: pytest --tracing=retain-on-failure
+    - name: Run tests
+      run: pytest
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-traces
-        path: test-results/
+        path: trace.zip
